--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,10 +1,11 @@
 <% layout('layouts/boilerplate.ejs') %>
+    <link rel="stylesheet" href="/css/images.css" class="rel">
 
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
-        <div class="col-6 offset-3">
+        <div class="col-md-6 offset-md-3">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate
-                class='validated-form'>
+                class='validated-form' enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input class="form-control" type="text" name="campground[title]" id="title" required
@@ -19,12 +20,15 @@
                     <div class="valid-feedback">Looks good!</div>
 
                 </div>
-                <div class=" mb-3">
-                    <label for="image" class="form-label">Image Url</label>
-                    <input class="form-control" type="text" name="campground[image]" id="image" required
-                        value="<%= campground.image %>">
-                    <div class="valid-feedback">Looks good!</div>
 
+                <div class="mb-3">
+                    <label class="form-label">Add more images</label>
+                    <div class="form-file custom-file">
+                        <input class="form-control custom-file-input" type="file" id="image" name="image" multiple
+                            onchange="previewMultiple(event)">
+                        <label for="image" class="form-label custom-file-label"></label>
+                    </div>
+                    <div id="formFile"></div>
                 </div>
                 <div class=" mb-3">
                     <label for="price" class="form-label">Price</label>
@@ -41,8 +45,17 @@
                     <textarea class="form-control" type="text" required name="campground[description]"
                         id="description"><%= campground.description %></textarea>
                     <div class="valid-feedback">Looks good!</div>
-
                 </div>
+                <div class="mb-3">
+                    <% campground.images.forEach(function(img,i){ %>
+                        <img class="img-thumbnail" src="<%=img.thumbnail%>" alt="">
+                        <div class="form-check-inline">
+                            <input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value='<%=img.filename%>'>
+                        </div>
+                        <label for="image-<%=i%>">Delete?</label>
+                        <% }) %>
+                </div>
+
                 <div class="mb-3">
                     <button class="btn btn-success">Update Campground</button>
                 </div>
