--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,30 +1,36 @@
 <% layout('layouts/boilerplate.ejs') %>
-    <h1>All Campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">Add Campground</a>
-    </div>
-    <% for (let campground of campgrounds){%>
 
-        <div class="card mb-3">
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="<%= campground.image %>" alt="" class="img-fluid">
-                </div>
-                <div class="col-md-8">
-                    <h5 class="card-title">
-                        <%= campground.title %>
-                    </h5>
-                    <p class="card-text">
-                        <%= campground.description %>
-                    </p>
-                    <p class="card-text">
-                        <small class="text-muted">
-                            <%= campground.location %>
-                        </small>
-                    </p>
-                    <a href="campgrounds/<%= campground._id %>" class="btn btn-primary">View</a>
+    <div id="cluster-map"></div>
+
+    <h1 class="text-center">All Campgrounds</h1>
+
+    <% for (let campground of campgrounds){%>
+        <% const randImg=Math.floor(Math.random() * campground.images.length); %>
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="<%= campground.images[randImg].url %>" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-8">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= campground.location %>
+                            </small>
+                        </p>
+                        <a href="campgrounds/<%= campground._id %>" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <%} %>
+            <%} %>
+                <script>
+                    let campgrounds = '<%-JSON.stringify(campgrounds)%>'
+                    const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+                </script>
+                <script src="/js/clusterMap.js"></script>
