--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,49 +1,61 @@
 <% layout('layouts/boilerplate.ejs') %>
-
+    <link rel="stylesheet" href="/css/images.css" class="rel">
     <div class="row">
-        <h1 class="text-center">New Campground</h1>
-        <div class="col-6 offset-3">
-            <form action="/campgrounds" method="post" novalidate class='validated-form'>
-                <div class="mb-3">
-                    <label for="title" class="form-label">Title</label>
-                    <input class="form-control" type="text" name="campground[title]" id="title" required>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="mb-3">
-                    <label for="location" class="form-label">Location</label>
-                    <input class="form-control" type="text" name="campground[location]" id="location" required>
-                    <div class="valid-feedback">Looks good!</div>
+        <h1 class="text-center mb-3">New Campground</h1>
+        <div class="col-md-6 offset-md-3">
+            <div class="card shadow">
+                <div class="card-body">
+                    <form action="/campgrounds" method="post" novalidate class='validated-form'
+                        enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Title</label>
+                            <input class="form-control" type="text" name="campground[title]" id="title" required>
+                            <div class="valid-feedback">Looks good!</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="location" class="form-label">Location</label>
+                            <input class="form-control" type="text" name="campground[location]" id="location" required>
+                            <div class="valid-feedback">Looks good!</div>
 
-                </div>
-                <div class="mb-3">
-                    <label for="image" class="form-label">Image Url</label>
-                    <input class="form-control" type="text" name="campground[image]" id="image" required>
-                    <div class="valid-feedback">Looks good!</div>
+                        </div>
 
-                </div>
-                <div class="mb-3">
-                    <label for="price" class="form-label">Price</label>
-                    <div class="input-group">
-                        <span class="input-group-text" id="basic-addon1">$</span>
-                        <input type="number" class="form-control" name="campground[price]" placeholder="0.00"
-                            aria-label="Price" aria-describedby="basic-addon1" required>
-                        <div class="valid-feedback">Looks good!</div>
 
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" type="text" name="campground[description]" id="description"
-                        required></textarea>
-                    <div class="valid-feedback">Looks good!</div>
 
+
+                        <div class="mb-3">
+                            <label for="price" class="form-label">Price</label>
+                            <div class="input-group">
+                                <span class="input-group-text" id="basic-addon1">$</span>
+                                <input type="number" class="form-control" name="campground[price]" placeholder="0.00"
+                                    aria-label="Price" aria-describedby="basic-addon1" required>
+                                <div class="valid-feedback">Looks good!</div>
+
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Description</label>
+                            <textarea class="form-control" type="text" name="campground[description]" id="description"
+                                required></textarea>
+                            <div class="valid-feedback">Looks good!</div>
+
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Choose Image(s)</label>
+                            <div class="form-file custom-file">
+                                <input class="form-control custom-file-input" type="file" id="image" name="image"
+                                    multiple onchange="previewMultiple(event)">
+                                <label for="image" class="form-label custom-file-label"></label>
+                            </div>
+                            <div id="formFile"></div>
+                        </div>
+                        <div class="mb-3">
+                            <button class="btn btn-success">Add Campground</button>
+                        </div>
+                    </form>
+                    <footer>
+                        <a href="/campgrounds">Cancel</a>
+                    </footer>
                 </div>
-                <div class="mb-3">
-                    <button class="btn btn-success">Add Campground</button>
-                </div>
-            </form>
-            <footer>
-                <a href="/campgrounds">Cancel</a>
-            </footer>
+            </div>
         </div>
     </div>
