--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,10 +1,36 @@
 <% layout('layouts/boilerplate.ejs') %>
     <link rel="stylesheet" href="/css/stars.css">
+    <script>
+        const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+        let campground = '<%-JSON.stringify(campground)%>'
+    </script>
 
     <div class="row">
         <div class="col-6">
+
+            <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img,i)=>{%>
+
+                        <div class="carousel-item <%= i===0?'active':'' %> ">
+                            <img class="d-block w-100" src="<%= img.url %>" alt="">
+                        </div>
+                        <%}) %>
+                </div>
+                <% if(campground.images.length>1){%>
+                    <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#campgroundCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </a>
+                    <% } %>
+            </div>
+
             <div class="card mb-3">
-                <img src="<%= campground.image %> " class="card-img-top" alt="...">
+
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title %> Info
@@ -39,6 +65,8 @@
 
         </div>
         <div class="col-6">
+            <div id="map"></div>
+
             <% if (currentUser){ %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%= campground._id %>/reviews" method="post" class="validated-form mb-3"
@@ -96,5 +124,7 @@
                         <% } %>
         </div>
     </div>
+
+    <script src="/js/showPageMap.js"></script>
 
     <!-- <a href="/campgrounds" class="card-link btn btn-primary">All Campgrounds</a> -->
